Clarify the rotation section based on feedback and hopefully make it easier to follow

--- a/lightning.html
+++ b/lightning.html
@@ -234,21 +234,7 @@
                     to autocrit, which accounts for a great deal of your burst damage.
                     Do not forget it!
                 </p>
-                <h3 id="rotation">Rotation</h3>
-                <p>The &quot;rotation&quot; for Lightning is just a priority system.
-                    Select the attack highest up in the list that's available at any
-                    given time.</p>
-                <ol class="rotation-list">
-                    <li><span class="sprite sprite-thundering-blast">Thundering Blast</span></li>
-                    <li><span class="sprite sprite-crushing-darkness">Crushing Darkness</span> (only with proc)</li>
-                    <li><span class="sprite sprite-lightning-flash">Lightning Flash</span></li>
-                    <li><span class="sprite sprite-shock">Shock</span> (only with <span class="sprite sprite-crushing-darkness">Crushing Darkness</span> on the target)</li>
-                    <li><span class="sprite sprite-chain-lightning">Chain Lightning</span> or
-                        <span class="sprite sprite-halted-offensive">Halted Offensive</span>
-                        (only with proc)</li>
-                    <li><span class="sprite sprite-lightning-bolt">Lightning Bolt</span></li>
-                </ol>
-                <h3>Offensive Cooldowns</h3>
+                <h3 id="ocds">Offensive Cooldowns</h3>
                 <p>You have two offensive cooldowns on sorc, these are
                     <span class="sprite sprite-recklessness">Recklessness</span>
                     and
@@ -289,7 +275,36 @@
                     That said, you&apos;ll normally use it in the opener to hit like a
                     goddamn truck, and after that you can find creative uses for it the
                     second time it comes up. Push this button off cooldown while
-                    freecasting.</p>
+                    doing damage.</p>
+                <h3 id="rotation">Rotation</h3>
+                <p>The &quot;rotation&quot; for Lightning is just a priority system.
+                    Select the attack highest up in the list that's available at any
+                    given time.</p>
+                <ol class="rotation-list">
+                    <li value="-1"><span class="sprite sprite-affliction">Affliction</span>
+                                  &mdash; once per target</li>
+                    <li value="0"><span class="sprite sprite-polarity-shift">Polarity Shift</span>
+                                  and
+                                  <span class="sprite sprite-recklessness">Recklessness</span>
+                                  &mdash; read <a href="#ocds">above</a></li>
+                    <li><span class="sprite sprite-thundering-blast">Thundering Blast</span></li>
+                    <li><span class="sprite sprite-halted-offensive">Halted Offensive</span>
+                        &mdash; if you just used
+                        <span class="sprite sprite-recklessness">Recklessness</span></li>
+                    <li><span class="sprite sprite-lightning-flash">Lightning Flash</span></li>
+                    <li><span class="sprite sprite-crushing-darkness">Crushing Darkness</span>
+                        &mdash; only with proc from
+                        <span class="sprite sprite-lightning-flash">Lightning Flash</span></li>
+                    <li><span class="sprite sprite-shock">Shock</span>
+                        &mdash; only with
+                        <span class="sprite sprite-crushing-darkness">Crushing Darkness</span>
+                        on the target</li>
+                    <li><span class="sprite sprite-chain-lightning">Chain Lightning</span> or
+                        <span class="sprite sprite-halted-offensive">Halted Offensive</span>
+                        &mdash; only with proc from
+                        <span class="sprite sprite-thundering-blast">Thundering Blast</span></li>
+                    <li><span class="sprite sprite-lightning-bolt">Lightning Bolt</span></li>
+                </ol>
                 <h3 id="target-selection">Target Selection</h3>
                 <p>As an arena player, your first target should obviously be any
                     that comes in egregiously unprepared and doesn&apos;t pop their
