Cleaned up sprites and typos, make some progress on madness guide

--- a/404.html
+++ b/404.html
@@ -21,10 +21,11 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous" defer></script>
         <script type="text/javascript" src="static/dynamics.js" defer></script>
     </head>
-    <body class="bg-throne">
+    <body>
         <nav id="titlebar">
             <h1><a href="/">Natalyh&apos;s SWTOR Guides</a></h1>
         </nav>
+        <div class="bg-throne"></div>
         <div id="content">
             <h2>404 Not Found</h2>
             <div>
