--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous" defer></script>
         <script type="text/javascript" src="static/dynamics.js" defer></script>
     </head>
-    <body class="bg-throne">
+    <body>
         <nav id="titlebar">
             <h1><a href="/">Natalyh&apos;s SWTOR Guides</a></h1>
         </nav>
+        <div class="bg-throne"></div>
         <div id="content">
             <div class="inline-right">
-                <img height="200" src="static/blast.webp" alt="My Main on SF" />
-                <p class="caption">My Main on SF</p>
+                <img height="200" src="static/blast.webp" alt="Suppress&iacute;on, My Main" />
+                <p class="caption">Suppress&iacute;on, My Main</p>
             </div>
             <p>Hello everyone! My name is Natalyh (obviously this is not my real name, it&apos;s the name of one of my toons that people started to know me by.) I started playing SWTOR in 2018 as a story noob and then at some point later got into PvP and ranked just in time to experience the end of Season 10 (and somehow stumble my way into a bronze).</p>
             <p>I started playing on Satele Shan during seasons 10, 11, and 12, then during preseason 13 made the transition to Star Forge, where I got my first gold later that season. Like most people who still play at this point, I&apos;ve left and come back to this game a number of times and I like to maintain a presence on all servers, though being a west coast player with shitty wifi makes it very difficult to play on European servers most of the time. I do like to travel though, so you may see me over there if I happen to be on the right side of the world at the time.</p>
@@ -55,7 +56,7 @@
             </div>
             <div id="faq-contact" class="faq">
                 <h3>How can I contact you?</h3>
-                <p>Message <a href="https://discordapp.com/users/513584600627413016">Jiddar#3146</a> on Discord, ideally. Double check the number on the end (or just click the link) because there are impostors. Alternatively, you can email <a href="mailto:nat@natalyh.tk">nat@natalyh.tk</a> and I may see it eventually.</p>
+                <p>Message <a href="https://discordapp.com/users/513584600627413016">Jiddar#3146</a> on Discord, ideally, but double check the number on the end (or just click the link). Alternatively, you can email <a href="mailto:nat@natalyh.tk">nat@natalyh.tk</a> and I may see it eventually.</p>
             </div>
         </div>
     </body>
