--- a/lightning.html
+++ b/lightning.html
@@ -26,10 +26,11 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous" defer></script>
         <script type="text/javascript" src="static/dynamics.js" defer></script>
     </head>
-    <body class="bg-throne">
+    <body>
         <nav id="titlebar">
             <h1><a href="/">Natalyh&apos;s SWTOR Guides</a></h1>
         </nav>
+        <div class="bg-throne"></div>
         <div id="content">
             <header id="banner" class="banner-lightning">
                 <h1>SWTOR 7.2 Lightning PvP Guide</h1>
@@ -80,7 +81,7 @@
                         alacrity build, which will require 6 alacrity pieces, one of
                         which is your Gathering Storm implant. Thus, in addition to
                         your legendaries, you will need to get <strong>5 alacrity</strong>
-                        enhancements and <strong>4 critical</strong> enhancements.
+                        enhancements and <strong>3 critical</strong> enhancements.
                         The moddable gear vendor <strong>Hyde and Zeek</strong> is far
                         and away the easiest way to do this, it isn&apos;t worth
                         bothering with any other method.</p>
@@ -382,7 +383,8 @@
                             control, I recommend using one casted attack while the
                             operative is rooted, and following it with
                             <span class="sprite sprite-electrocute">Electrocute</span>
-                            and 3 more hard-hitting attacks. See the "Locking Down"
+                            and 3 more hard-hitting attacks. See the
+                            <a href="#lock-down">&quot;Locking Down&quot;</a>
                             section below for one very effective way to chain your
                             controlling effects (of several possible).</li>
                         <li><strong>Powertechs.</strong>
