Use relative paths, why not

--- a/lightning.html
+++ b/lightning.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <nav id="titlebar">
-            <h1><a href="/">Natalyh&apos;s SWTOR Guides</a></h1>
+            <h1><a href="index.html">Natalyh&apos;s SWTOR Guides</a></h1>
         </nav>
         <div class="bg-throne"></div>
         <div id="content">
@@ -49,7 +49,7 @@
                     make sacrifices in all secondary areas to compensate for these
                     newfound weaknesses. If you want to feel like Emperor Palpatine
                     and steamroll people effortlessly, respec to
-                    <a href="/madness.html">madness</a> immediately
+                    <a href="madness.html">madness</a> immediately
                     and don&apos;t bother to continue reading&mdash;this spec does not
                     have what you are looking for. That said, if you prefer a more
                     tactical, conservative playstyle involving outplaying defensive
@@ -870,7 +870,7 @@
                 <p>That&apos;s about all I have for now, I may add a dueling section
                     or something later. Hopefully you enjoyed reading and if you have
                     criticisms or things I missed that you want to know about, contact
-                    me by one of the ways listed on the <a href="/">home page</a>.
+                    me by one of the ways listed on the <a href="index.html">home page</a>.
                 </p>
                 <h3>Helpful Links and Videos</h3>
                 <p>Here are some videos you may consider watching to help out your
