--- a/madness.html
+++ b/madness.html
@@ -831,7 +831,7 @@
                 <p>That&apos;s about all I have for now, I may add a dueling section
                     or something later. Hopefully you enjoyed reading and if you have
                     criticisms or things I missed that you want to know about, contact
-                    me by one of the ways listed on the <a href="/">home page</a>.
+                    me by one of the ways listed on the <a href="index.html">home page</a>.
                 </p>
                 <h3>Helpful Links and Videos</h3>
                 <p>Here are some videos you may consider watching to help out your
