Typo fixes to lightning guide, add madness guide offense section, fix 404 page for nested URLs

--- a/404.html
+++ b/404.html
@@ -16,6 +16,7 @@
         <meta property="og:url" content="https://natalyh.tk/404.html" />
         <link rel="canonical" href="https://natalyh.tk/404.html" />
         <title>Page Not Found / Natalyh&apos;s SWTOR Guides</title>
+        <base href="https://natalyh.tk/404.html" />
         <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
         <link rel="stylesheet" type="text/css" href="static/style.css" />
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous" defer></script>
@@ -23,7 +24,7 @@
     </head>
     <body>
         <nav id="titlebar">
-            <h1><a href="/">Natalyh&apos;s SWTOR Guides</a></h1>
+            <h1><a href="index.html">Natalyh&apos;s SWTOR Guides</a></h1>
         </nav>
         <div class="bg-throne"></div>
         <div id="content">
@@ -33,7 +34,8 @@
                 <p>Either you typed in a bogus link, clicked a bogus link, or clicked a link to a page that was later deleted.</p>
                 <h3>Suggestions</h3>
                 <ul>
-                    <li>Go to <a href="https://natalyh.tk/">natalyh.tk</a>.</li>
+                    <li>Go to <a href="index.html">the home page</a>.</li>
+                    <li>Learn how to play <a href="lightning.html">lightning</a>.</li>
                     <li>Go <a href="#" onclick="history.go(-1); return false;">back</a> where you came from.
                 </ul>
                 <h3>Alternative Solutions</h3>
