--- a/lightning.html
+++ b/lightning.html
@@ -408,7 +408,7 @@
                             your team will kill them anyway and it&apos;s more useful
                             to use your damage profile on something that&apos;s a
                             bigger threat. That said, if your teammates are ignoring
-                            a jugg that&apos;s low or has spend DCDs, certainly don&apos;t
+                            a jugg that&apos;s low or has spent DCDs, certainly don&apos;t
                             just let it heal.
                         </li>
                         <li><strong>Assassins.</strong>
