Add some sections to the lightning guide

--- a/lightning.html
+++ b/lightning.html
@@ -865,6 +865,69 @@
                 </p>
             </section>
             <hr />
+            <section id="advanced">
+                <h2>Advanced Topics</h2>
+                <p>Don&apos;t pay too much mind to these concepts when you&apos;re
+                    first starting out, but coming back to them may help you win more
+                    fights in the future once you&apos;ve got the basic hang of this
+                    spec.</p>
+                <h3>Empty GCD Usage</h3>
+                <p>A fundamental premise of SWTOR is that someone who makes use of all
+                    their GCDs (presses an ability as soon as possible) will always
+                    have a significant advantage over someone that does not. This is
+                    what we call &quot;wasting globals&quot;. Since in this spec you
+                    will frequently be taking cover to avoid burst damage, here is the
+                    ability priority during those GCD windows where you aren&apos;t in
+                    line-of-sight to attack anyone.</p>
+                <ol>
+                    <li><span class="sprite sprite-static-barrier">Static Barrier</span></li>
+                    <li><span class="sprite sprite-resurgence">Resurgence</span></li>
+                    <li><span class="sprite sprite-dark-heal">Dark Heal</span>
+                        (Only if it is proc&apos;d or you are below 30% health)
+                        &mdash; skip if you have full health.</li>
+                    <li><span class="sprite sprite-consuming-darkness">Consuming Darkness</span>
+                        (Use sparingly unless you are low on force.)</li>
+                </ol>
+                <p>Conversely, to the maximum extent permitted by the situation
+                    you&apos;re in, try to break line-of-sight with any enemy players
+                    targeting you while you use these abilities naturally, in order to
+                    avoid taking unreciprocated damage.</p>
+                <h3>Optimizing for Gathering Storm</h3>
+                <p>As you may have noticed, your <strong>Gathering Storm</strong>
+                    implant includes a nifty buff which increases the damage of the
+                    next ability after your
+                    <span class="sprite sprite-force-speed">Force Speed</span>
+                    by 20%. Since
+                    <span class="sprite sprite-chain-lightning">Chain Lightning</span> / <span class="sprite sprite-halted-offensive">Halted Offensive</span>
+                    operates on a system of procs, rather than having its own cooldown,
+                    it is ideal for your damage to delay this ability until
+                    immediately after you activate
+                    <span class="sprite sprite-force-speed">Force Speed</span>,
+                    which regardless of what you are doing you will likely be doing
+                    on cooldown.</p>
+                <p>It is important to note that there are many instances in which
+                    it is not advisable to utilize this optimization, however. For
+                    example, when you have
+                    <span class="sprite sprite-recklessness">Recklessness</span>
+                    active, when you are the other team&apos;s kill target, or when
+                    you are chasing a moving target that you cannot stand still to cast
+                    <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                    on, this advice should be completely ignored. This is because
+                    under
+                    <span class="sprite sprite-recklessness">Recklessness</span>,
+                    you will want to use your two hardest-hitting abilities
+                    immediately, regardless of the status of
+                    <span class="sprite sprite-force-speed">Force Speed</span>,
+                    and because using this optimization will oftentimes force you to
+                    use your <strong>Eyrin's Haste</strong> buff on an instant-cast
+                    <span class="sprite sprite-lightning-bolt">Lightning Bolt</span>,
+                    rather than an instant-cast
+                    <span class="sprite sprite-thundering-blast">Thundering Blast</span>.
+                    This is actually a net improvement to your damage, but it comes at
+                    a steep cost in terms of mobility, which is your highest priority
+                    when kiting or chasing a target.
+            </section>
+            <hr />
             <footer>
                 <h2>Thanks for Reading</h2>
                 <p>That&apos;s about all I have for now, I may add a dueling section
