Start the healer guide

--- a/madness.html
+++ b/madness.html
@@ -92,8 +92,8 @@
                         bothering with any other method.</p>
                     <div class="multiplex">
                         <div class="mux-frame">
-                            <a href="static/stats-madness.webp" target="_blank">
-                                <img class="size-std" src="static/stats-madness.webp" alt="Madness Stats (332)" />
+                            <a href="static/stats-standard.webp" target="_blank">
+                                <img class="size-std" src="static/stats-standard.webp" alt="Madness Stats (332)" />
                             </a>
                             <p class="caption">Madness Stats (332)</p>
                         </div>
