Fix some lightning guide typos

--- a/lightning.html
+++ b/lightning.html
@@ -455,7 +455,7 @@
                 <h4>Name-Clicking</h4>
                 <p>Camouflage will forcibly remove a player from your target, making
                     them difficult to find again. However, spam clicking their name in
-                    the enemy players frame can counteract, this causing you to
+                    the enemy players frame can counteract this, causing you to
                     re-target them as soon as they reappear. You can then do a quick
                     walk in all four directions, and whichever one makes the number
                     of meters between you and them (shown on the player frame)
@@ -689,7 +689,7 @@
                 <p>Now, spamming dark heal procs of course raises the issue that it
                     completely annihilates your force. There are two ways to manage
                     this, and most people will do a combination of both. The first is
-                    to be extremely religious about avoiding damage, this minimizing
+                    to be extremely religious about avoiding damage, thus minimizing
                     the need to heal and maximizing the frequency of combat drops,
                     allowing you to regenerate force with
                     <span class="sprite sprite-seethe">Seethe</span>.
