Reflect discord changes and transition to 7.3

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
             <div id="faq-contact" class="faq">
                 <h3>How can I contact you?</h3>
-                <p>Message <a href="https://discordapp.com/users/513584600627413016">Jiddar#3146</a> on Discord, ideally, but double check the number on the end (or just click the link). Alternatively, you can email <a href="mailto:nat@natalyh.tk">nat@natalyh.tk</a> and I may see it eventually.</p>
+                <p>Message <a href="https://discordapp.com/users/513584600627413016">natalyh</a> (formerly Jiddar#3146) on Discord, ideally, or just click the link. Alternatively, you can email <a href="mailto:nat@natalyh.tk">nat@natalyh.tk</a> and I may see it eventually.</p>
             </div>
         </div>
     </body>
