Updates to lightning guide for 7.3

--- a/lightning.html
+++ b/lightning.html
@@ -37,33 +37,40 @@
             </header>
             <section id="playstyle">
                 <h2>The Lightning Playstyle</h2>
-                <p>Before getting started with lightning you should know this: if
-                    you&apos;ve heard things about the spec being strong or
-                    overpowered, these are relics from 6.0 when it was indeed quite
-                    strong. Lightning was traditionally a jack-of-all-trades kind of
-                    spec: decent damage, decent survivability, decent control of enemy
-                    players, decent AOE potential, et cetera; but not the best in any
-                    of these categories. However, with the release of 7.0 it faces a
-                    glaring survivability problem, as well as doing comparatively
-                    much worse damage than in previous patches, so we will have to
-                    make sacrifices in all secondary areas to compensate for these
-                    newfound weaknesses. If you want to feel like Emperor Palpatine
-                    and steamroll people effortlessly, respec to
-                    <a href="madness.html">madness</a> immediately
-                    and don&apos;t bother to continue reading&mdash;this spec does not
-                    have what you are looking for. That said, if you prefer a more
-                    tactical, conservative playstyle involving outplaying defensive
-                    cooldowns, choosing your opportunity windows, and reducing your
-                    damage taken by way of positioning, or you just enjoy the brutal
-                    sounds of firing off a different kind of lightning bolt with every
-                    GCD, this spec does still have something to offer, and I will show
-                    you how to force it into viability.</p>
+                <p>I used to have a very angsty paragraph here about how lightning is
+                    bad in 7.0, but honestly props to Shabir, this spec has begun to
+                    earn its place back as a fairly squishy, but tactical jack-of-all
+                    trades spec with the ability to perform to the level of its user.
+                    Make no mistake, if you hear things about sorcs being overpowered
+                    or broken, they are referring to madness, and at difference to
+                    that spec, you will actually have to play well to do well on this
+                    one. However, the gaps between specs are closing and I&apos;m
+                    honestly quite satisfied with how the class balance in 7.3 is
+                    turning out. So, if you&apos;re bored of facerolling the queue on
+                    madness, or you enjoy the brutal sounds of shooting lightning
+                    bolts at your enemies with every GCD, or you just aren&apos;t an
+                    asshole, I&apos;ll show you how to play the sorc spec that
+                    requires actual user input. In my view, lightning is by far the
+                    most interesting spec in the game due to its versatility and
+                    interactivity (play well, perform well; play badly, not so much),
+                    and hopefully with a little nudging you&apos;ll come to enjoy it
+                    as much as I do.</p>
+                <p>Lightning has benefitted majorly from its buffs since the
+                    expansion&apos;s launch, but make no mistake&mdash; it still
+                    requires a tactical, conservative playstyle involving outplaying
+                    defensive cooldowns, choosing your opportunity windows, and
+                    reducing your damage taken by way of positioning. If you want to
+                    feel like Emperor Palpatine and effortlessly destroy any enemies
+                    in your path with torrents of force lightning, you&apos;ll likely
+                    want to respec to
+                    <a href="madness.html">madness</a>
+                    and never look back.</p>
             </section>
             <hr />
             <section id="builds">
                 <h2>Viable Lightning Builds</h2>
                 <p>There are essentially only two ways to build lightning without
-                    becoming worm food every time a marauder so much as looks at you,
+                    becoming worm food every time a rage jugg so much as looks at you,
                     which we&apos;ll take a look at in a second. Both will use the
                     same gear and legendary implants, though with different tacticals.</p>
                 <div id="build-gear">
@@ -75,7 +82,7 @@
                         you want <strong>Gathering Storm Package</strong> and
                         <strong>Unmatched Haste Package</strong>, in that order.
                         Without Gathering Storm, Unmatched Haste barely does anything
-                        for you, so prioritize Gathering Storm.</p>
+                        for you, so prioritize getting Gathering Storm first.</p>
                     <p>For regular gear, you want the best item level gear you can get
                         at any point in time. I recommend using the <strong>1.3 GCD</strong>
                         alacrity build, which will require 6 alacrity pieces, one of
@@ -147,7 +154,7 @@
                         immobile setup with the potential to output devastating AOE
                         damage and destroy an entire team. While on 90% of occasions
                         I recommend playing the first build, if you find yourself with
-                        a competent tank and healer, this build can output devastating
+                        a competent tank and healer, this build can output catastrophic
                         pressure. It was mostly used for group ranked, but it&apos;s
                         worth documenting here because it can be a premade-buster with
                         proper support. With this build you should be using
@@ -163,7 +170,7 @@
                         <span class="sprite sprite-overload">Overload</span>
                         to create distance and take cover from enemy ranged fire, as
                         always, but you will have limited opportunities to do so with
-                        this build.</p>
+                        this build, and you will be reliant on support from your team.</p>
                     <h3>Tactical Item</h3>
                     <p>You will be running the <strong>Elemental Convection</strong>
                         tactical, which will reset the cooldown of
@@ -280,10 +287,10 @@
                 <h3 id="rotation">Rotation</h3>
                 <p>The &quot;rotation&quot; for Lightning is just a priority system.
                     Select the attack highest up in the list that's available at any
-                    given time.</p>
+                    given time, provided the stated conditions apply.</p>
                 <ol class="rotation-list">
                     <li value="-1"><span class="sprite sprite-affliction">Affliction</span>
-                                  &mdash; once per target</li>
+                                  &mdash; if not already on target</li>
                     <li value="0"><span class="sprite sprite-polarity-shift">Polarity Shift</span>
                                   and
                                   <span class="sprite sprite-recklessness">Recklessness</span>
@@ -319,8 +326,13 @@
                             in 7.0 the only thing that&apos;s changed is that they
                             have fewer of them. Watch for rolls and avoid hitting your
                             major burst into them, but otherwise a sniper is basically
-                            a parse dummy with no ability to recover its health (as
-                            long as you remember to chase phase walk, that is.)</li>
+                            a parse dummy. Important to note, in 7.3 sniper received
+                            some passive healing while sitting in cover, but as long
+                            as you're able to keep up with the sniper your damage will
+                            far outpace this healing and force them to run (and
+                            therefore not receive said healing). Just don&apos;t
+                            relent in your pressure (and remember to chase phase walk)
+                            and the sniper is dead meat.</li>
                         <li><strong>Mercenaries.</strong>
                             Mercs don&apos;t actually have bad defensives,
                             but the damage toolkit you get as Lightning is essentially
@@ -389,18 +401,37 @@
                             controlling effects (of several possible).</li>
                         <li><strong>Powertechs.</strong>
                             PT defensives are almost entirely armor-based,
-                            which means that you as a Lightning Sorc barely care about
-                            them at all. If the powertech pops Emergency Power (the
-                            glowing white bubble around themselves), treat it like an
-                            operative rolling for 2 GCDs (ignore them, do something
-                            else that&apos;s useful), and then go back to dumpstering.
-                            If they pop Kolto Overload at high health, they will most
-                            likely live through it, so you should swap targets for 8
-                            seconds. If they pop it at low (sub-20%) health, you can
-                            definitely kill them through it if your team has eyes, so
-                            full speed ahead. Killing a powertech is slow, but you
+                            which means that your
+                            <span class="sprite sprite-thundering-blast">Thundering Blast</span>
+                            will hit straight through them for full damage. You can
+                            mostly parse on a powertech like a training dummy, but
+                            there are a few things to watch out for. If the powertech
+                            pops Emergency Power (the glowing white bubble around
+                            themselves), treat it like an operative rolling for 2 GCDs
+                            (ignore them, do something else that&apos;s useful), and
+                            then go back to dumpstering.
+                            In a situation with healers or tanks, you&apos;re unlikely
+                            to kill a PT through Energy Shield (the blue bubble), so
+                            it&apos;s worth swapping off. Otherwise, you can go
+                            straight through with no concern.
+                            The treatment of Kolto Overload, however, depends on the
+                            spec of the PT. In AP, if they pop Kolto Overload at high
+                            health, they will most likely live through it, so you
+                            should swap targets for 8 seconds. If they pop it at low
+                            (sub-20%) health, you can definitely kill them through it
+                            if your team has eyes, so full speed ahead.
+                            If the PT is pyrotech (which you&apos;ll know because
+                            there will be fire everywhere), however, they have a
+                            passive that grants them ridiculous damage reduction while
+                            kolto is running, and you will need to swap off.
+                            Killing a powertech is slow, but you
                             will almost always succeed. PTs are much more of a
-                            defensive than an offensive problem.</li>
+                            defensive than an offensive problem. It should be noted,
+                            however, that killing a pyro PT through any kind of
+                            support is miserably slow due to their cooldown reduction
+                            on Kolto Overload, and their damage profile is generally
+                            tame enough to warrant choosing another target in this
+                            situation.</li>
                         <li><strong>Juggernauts.</strong>
                             Juggs are like PTs but with more healing and
                             less potential to kill anything. You <em>can</em> go them
