Correction to madness combo

--- a/madness.html
+++ b/madness.html
@@ -511,13 +511,15 @@
                     if you have it available in order to get maximum lockdown value.
                 </p>
                 <ol>
+                    <li><span class="sprite sprite-affliction">Affliction</span>
+                        (if it will fall off before leech finishes casting)</li>
                     <li><span class="sprite sprite-overload">Overload</span></li>
                     <li><span class="sprite sprite-death-field">Death Field</span> or
                         <span class="sprite sprite-death-brand">Death Brand</span></li>
-                    <li><span class="sprite sprite-affliction">Affliction</span></li>
                     <li><span class="sprite sprite-force-leech">Force Leech</span></li>
                     <li><span class="sprite sprite-creeping-terror">Creeping Terror</span></li>
                     <li><span class="sprite sprite-force-lightning">Force Lightning</span></li>
+                    <li><span class="sprite sprite-demolish">Demolish</span></li>
                 </ol>
                 <p>You can also use the following combination in tandem with the
                     Backlash talent to punish a melee player that attempts to sit on
